--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <aside class="fixed top-0 left-0 h-screen w-64 lg:w-72 bg-gray-900/50 backdrop-blur-sm border-r border-gray-700/50 p-6 flex flex-col transition-all duration-300">
             <!-- Developer Profile Section -->
             <div class="text-center mb-10">
-                <img src="https://placehold.co/100x100/34d399/111827?text=Dev" alt="Foto Profil" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-emerald-400 shadow-lg">
-                <h1 class="text-xl font-bold text-white">Nama Developer</h1>
+                <img src="image/Logo Sevenity-RealESRGAN_x4plus_anime_6B.png" alt="Foto Profil" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-emerald-400 shadow-lg">
+                <h1 class="text-xl font-bold text-white">Sevenity</h1>
                 <p class="text-sm text-gray-400">Game & App Creator</p>
                 <!-- Social Media Icons -->
                 <div class="flex justify-center space-x-4 mt-4 text-gray-400">
-                    <a href="#" class="hover:text-emerald-400 transition-colors"><i class="fab fa-github fa-lg"></i></a>
+                    <a href="https://github.com/ZHOGIA" class="hover:text-emerald-400 transition-colors"><i class="fab fa-github fa-lg"></i></a>
                     <a href="#" class="hover:text-emerald-400 transition-colors"><i class="fab fa-linkedin fa-lg"></i></a>
                     <a href="#" class="hover:text-emerald-400 transition-colors"><i class="fab fa-twitter fa-lg"></i></a>
                 </div>
@@ -80,7 +80,7 @@
             </div>
             
             <footer class="text-center text-xs text-gray-500 mt-6">
-                <p>&copy; 2025 Nama Developer. All Rights Reserved.</p>
+                <p>&copy; 2025 Sevenity. All Rights Reserved.</p>
             </footer>
         </aside>
 
@@ -146,30 +146,30 @@
         // --- Data Aplikasi ---
         // Kamu bisa menambahkan atau mengubah data aplikasi di sini.
         const apps = [
-            {
-                id: 'game-petualangan',
-                name: 'Game Petualangan Ajaib',
-                overview: 'Sebuah game petualangan 2D dengan grafis piksel yang menawan. Jelajahi dunia magis, kalahkan monster, dan temukan harta karun tersembunyi.',
-                imageUrl: 'https://placehold.co/600x400/34d399/111827?text=Game+Ajaib',
-                purpose: 'Dibuat untuk memberikan pengalaman bermain game klasik yang menyenangkan dan menantang bagi semua umur.',
-                privacy: 'Game ini tidak mengumpulkan data pribadi apa pun dari pemain. Semua kemajuan disimpan secara lokal di perangkat Anda.'
-            },
+            // {
+            //     id: 'game-petualangan',
+            //     name: 'TimeMark: Mark Your Moment.',
+            //     overview: 'Sebuah game petualangan 2D dengan grafis piksel yang menawan. Jelajahi dunia magis, kalahkan monster, dan temukan harta karun tersembunyi.',
+            //     imageUrl: 'https://placehold.co/600x400/34d399/111827?text=Game+Ajaib',
+            //     purpose: 'Dibuat untuk memberikan pengalaman bermain game klasik yang menyenangkan dan menantang bagi semua umur.',
+            //     privacy: 'Game ini tidak mengumpulkan data pribadi apa pun dari pemain. Semua kemajuan disimpan secara lokal di perangkat Anda.'
+            // },
             {
                 id: 'aplikasi-produktif',
-                name: 'Produktivitas Pro',
+                name: 'TimeMark: Mark Your Moment.',
                 overview: 'Aplikasi manajemen tugas yang simpel namun kuat. Atur jadwal harianmu, buat daftar tugas, dan fokus pada hal yang paling penting.',
                 imageUrl: 'https://placehold.co/600x400/60a5fa/111827?text=Produktif+Pro',
                 purpose: 'Membantu pengguna meningkatkan produktivitas dan mengelola waktu dengan lebih efektif melalui antarmuka yang bersih dan intuitif.',
                 privacy: 'Kami menghargai privasi Anda. Semua data tugas dan jadwal dienkripsi dan hanya dapat diakses oleh Anda.'
             },
-            {
-                id: 'editor-foto',
-                name: 'Editor Foto AI',
-                overview: 'Ubah fotomu menjadi karya seni dengan bantuan AI. Terapkan filter unik, tingkatkan kualitas gambar, dan hapus objek yang tidak diinginkan dengan mudah.',
-                imageUrl: 'https://placehold.co/600x400/c084fc/111827?text=Foto+AI',
-                purpose: 'Memberikan alat editing foto yang canggih dan mudah digunakan bagi fotografer pemula maupun profesional.',
-                privacy: 'Foto yang Anda unggah diproses di perangkat Anda atau di server kami dan akan dihapus secara otomatis setelah 24 jam.'
-            }
+            // {
+            //     id: 'editor-foto',
+            //     name: 'Editor Foto AI',
+            //     overview: 'Ubah fotomu menjadi karya seni dengan bantuan AI. Terapkan filter unik, tingkatkan kualitas gambar, dan hapus objek yang tidak diinginkan dengan mudah.',
+            //     imageUrl: 'https://placehold.co/600x400/c084fc/111827?text=Foto+AI',
+            //     purpose: 'Memberikan alat editing foto yang canggih dan mudah digunakan bagi fotografer pemula maupun profesional.',
+            //     privacy: 'Foto yang Anda unggah diproses di perangkat Anda atau di server kami dan akan dihapus secara otomatis setelah 24 jam.'
+            // }
         ];
 
         // --- Elemen DOM ---
