--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <aside class="fixed top-0 left-0 h-screen w-64 lg:w-72 bg-gray-900/50 backdrop-blur-sm border-r border-gray-700/50 p-6 flex flex-col transition-all duration-300">
             <!-- Developer Profile Section -->
             <div class="text-center mb-10">
-                <img src="image/Logo Sevenity-RealESRGAN_x4plus_anime_6B.png" alt="Foto Profil" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-emerald-400 shadow-lg">
+                <img src="https://raw.githubusercontent.com/ZHOGIA/Sevenity/bd29e3ff6b20eb21ce228a4d9f1d9e2f95ae0775/image/Logo%20Sevenity.png" alt="Foto Profil" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-emerald-400 shadow-lg">
                 <h1 class="text-xl font-bold text-white">Sevenity</h1>
                 <p class="text-sm text-gray-400">Game & App Creator</p>
                 <!-- Social Media Icons -->
@@ -254,3 +254,4 @@
     </script>
 </body>
 </html>
+
