--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             // --- Data Aplikasi ---
             const apps = [
-                { id: 'game-petualangan', name: 'Game Petualangan Ajaib', overview: 'Sebuah game petualangan 2D dengan grafis piksel yang menawan. Jelajahi dunia magis, kalahkan monster, dan temukan harta karun tersembunyi.', imageUrl: 'https://placehold.co/600x400/5eead4/111827?text=Game+Ajaib', purpose: 'Dibuat untuk memberikan pengalaman bermain game klasik yang menyenangkan dan menantang bagi semua umur.', privacy: 'Game ini tidak mengumpulkan data pribadi apa pun dari pemain. Semua kemajuan disimpan secara lokal di perangkat Anda.' },
+                // { id: 'game-petualangan', name: 'Game Petualangan Ajaib', overview: 'Sebuah game petualangan 2D dengan grafis piksel yang menawan. Jelajahi dunia magis, kalahkan monster, dan temukan harta karun tersembunyi.', imageUrl: 'https://placehold.co/600x400/5eead4/111827?text=Game+Ajaib', purpose: 'Dibuat untuk memberikan pengalaman bermain game klasik yang menyenangkan dan menantang bagi semua umur.', privacy: 'Game ini tidak mengumpulkan data pribadi apa pun dari pemain. Semua kemajuan disimpan secara lokal di perangkat Anda.' },
                 { 
                   id: 'aplikasi-produktif', 
                   name: 'TimeMark: Mark Your Moment.', 
@@ -166,7 +166,7 @@
                   purpose: 'Tujuan utama TimeMark adalah membantumu menghargai setiap momen. Aplikasi ini dirancang untuk:<br><br>• <strong>Membantu Mengingat:</strong> Menjadi \"brankas\" digital untuk semua tanggal pentingmu.<br>• <strong>Membangun Antusiasme:</strong> Memberi semangat untuk menantikan hari spesial dengan fitur hitung mundur.<br>• <strong>Menyediakan Platform Simpel:</strong> Fokus pada fungsi utama tanpa fitur rumit, sehingga mudah digunakan.', 
                   privacy: 'Privasi kamu itu penting banget buat kami di TimeMark. Kami janji akan selalu transparan tentang data apa yang kami gunakan. Data yang kamu masukkan adalah milikmu dan kami tidak mengambil data pribadi. <br><br>Untuk penjelasan yang lebih detail, silakan kunjungi halaman Kebijakan Privasi kami dengan menekan tombol di bawah ini. <br><br><a href=\"https://zhogia.github.io/sevenityPrivacy/\" target=\"_blank\" rel=\"noopener noreferrer\" class=\"inline-block mt-2 bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 transition-colors\">Kunjungi Kebijakan Privasi</a>' 
                 },
-                { id: 'editor-foto', name: 'Editor Foto AI', overview: 'Ubah fotomu menjadi karya seni dengan bantuan AI. Terapkan filter unik, tingkatkan kualitas gambar, dan hapus objek yang tidak diinginkan dengan mudah.', imageUrl: 'https://placehold.co/600x400/d8b4fe/111827?text=Foto+AI', purpose: 'Memberikan alat editing foto yang canggih dan mudah digunakan bagi fotografer pemula maupun profesional.', privacy: 'Foto yang Anda unggah diproses di perangkat Anda atau di server kami dan akan dihapus secara otomatis setelah 24 jam.' }
+                // { id: 'editor-foto', name: 'Editor Foto AI', overview: 'Ubah fotomu menjadi karya seni dengan bantuan AI. Terapkan filter unik, tingkatkan kualitas gambar, dan hapus objek yang tidak diinginkan dengan mudah.', imageUrl: 'https://placehold.co/600x400/d8b4fe/111827?text=Foto+AI', purpose: 'Memberikan alat editing foto yang canggih dan mudah digunakan bagi fotografer pemula maupun profesional.', privacy: 'Foto yang Anda unggah diproses di perangkat Anda atau di server kami dan akan dihapus secara otomatis setelah 24 jam.' }
             ];
 
             // --- Elemen DOM ---
@@ -269,5 +269,6 @@
     </script>
 </body>
 </html>
+
 
 
